wordpress/ssl-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - kube.eme-devops.com
    secretName: letsencrypt-prod
  rules:
  - host: kube.eme-devops.com
    http:
      paths:
      - backend:
          serviceName: wp1-service-np
          servicePort: 80
